--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,9 @@ dependencies = [
     "fastapi>=0.115.12",
     "openai>=1.82.1",
     "python-dotenv>=1.1.0",
+    "ruff>=0.11.12",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
