--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.12",
     "openai>=1.82.1",
+    "pygithub>=2.6.1",
     "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
     "ruff>=0.11.12",
 ]
 
