--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
     "ruff>=0.11.12",
+    "uvicorn>=0.34.2",
 ]
 
 [build-system]
